--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
@@ -21,6 +21,22 @@
   //padding-right: 5px;
 }
 
+.event-fumble {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-gap: 10px;
+  //padding-left: 5px;
+  //padding-right: 5px;
+}
+
+.event-is-fumble {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto auto;
+  grid-gap: 10px;
+
+}
+
 .event-num-qtr-row {
   display: grid;
   grid-template-columns: 50% 50%;
@@ -39,10 +55,34 @@
   //padding: 10px;
 }
 
-.event-hash-type {
+.event-hash-direction {
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 40% 40%;
   grid-template-rows: auto;
   grid-gap: 10px;
   //padding: 10px;
+}
+
+.input-number-with-buttons {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  grid-template-rows: auto auto;
+  grid-gap: 5px;
+  justify-content: center;
+  align-items: center;
+}
+
+.input-number {
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+}
+
+.increment-button {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+}
+
+.decrement-button {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
 }
