--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
@@ -1,3 +1,7 @@
+label {
+  padding: 5px;
+}
+
 .event-table {
   //width: 90%;
   font-size: 16px;
@@ -17,14 +21,18 @@
   display: grid;
   grid-template-columns: auto;
   grid-gap: 10px;
-  //padding-left: 5px;
-  //padding-right: 5px;
+  justify-content: stretch;
+  align-items: center;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .event-fumble {
   display: grid;
   grid-template-columns: auto auto;
   grid-gap: 10px;
+  justify-content: stretch;
+  align-items: center;
   //padding-left: 5px;
   //padding-right: 5px;
 }
@@ -42,6 +50,8 @@
   grid-template-columns: 50% 50%;
   grid-template-rows: auto;
   grid-gap: 10px;
+  justify-content: stretch;
+  align-items: center;
   //padding: 10px;
 }
 
@@ -57,9 +67,11 @@
 
 .event-hash-direction {
   display: grid;
-  grid-template-columns: 40% 40%;
+  grid-template-columns: auto auto;
   grid-template-rows: auto;
   grid-gap: 10px;
+  justify-content: stretch;
+  align-items: center;
   //padding: 10px;
 }
 
