--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
@@ -33,8 +33,6 @@ label {
   grid-gap: 10px;
   justify-content: stretch;
   align-items: center;
-  //padding-left: 5px;
-  //padding-right: 5px;
 }
 
 .event-is-fumble {
@@ -42,10 +40,19 @@ label {
   grid-template-columns: auto;
   grid-template-rows: auto auto;
   grid-gap: 10px;
-
 }
 
 .event-num-qtr-row {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: auto;
+  grid-gap: 10px;
+  justify-content: stretch;
+  align-items: center;
+  //padding: 10px;
+}
+
+.event-ballon-distance {
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: auto;
