--- a/src/app/shared/scoreboards/admin-forms/events-forms/events-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/events-forms/events-forms.component.html
@@ -8,6 +8,8 @@
   *ngIf="eventsFormsVisible$ | async"
   class="event-forms"
 >
+  <p>Home Team Stats</p>
+  <p>Run Yards: {{ runDistanceForTeamA$ | async }}</p>
   <p>
     @if (data && data.match_id) {
       <form
