events stats calculate distance with next information

--- a/src/app/shared/scoreboards/admin-forms/events-forms/events-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/events-forms/events-forms.component.html
@@ -14,12 +14,14 @@
       <p>Offence Yards: {{ offenceDistanceForTeamA$ | async }}</p>
       <p>Run Yards: {{ runDistanceForTeamA$ | async }}</p>
       <p>Pass Yards: {{ passDistanceForTeamA$ | async }}</p>
+      <p>Flag Yards: {{ flagYardsTeamA$ | async }}</p>
     </div>
     <div>
       <p class="tui-text_h6">{{ data?.teams_data?.team_b?.title | uppercase }} STATS</p>
       <p>Offence Yards: {{ offenceDistanceForTeamB$ | async }}</p>
       <p>Run Yards: {{ runDistanceForTeamB$ | async }}</p>
       <p>Pass Yards: {{ passDistanceForTeamB$ | async }}</p>
+      <p>Flag Yards: {{ flagYardsTeamB$ | async }}</p>
     </div>
 
   </div>
