events expand abil

--- a/src/app/shared/scoreboards/admin-forms/events-forms/events-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/events-forms/events-forms.component.html
@@ -24,20 +24,19 @@
             {{ qb.person?.second_name | titlecase }}
             (PASS ATT: {{ qb.qb_stats?.passes }}/{{ qb.qb_stats?.passes_completed }},
             PASS YDS: {{ qb.qb_stats?.pass_yards }},
-            PASS%: {{
-              qb.qb_stats?.passes_completed && qb.qb_stats?.passes
-                ? (qb.qb_stats!.passes_completed / qb.qb_stats!.passes) * 100
-                : 0
-                  | number:'1.0-1'
-            }}%,
+            PASS%: @if (qb.qb_stats?.passes_completed && qb.qb_stats?.passes) {
+            {{ qb.qb_stats!.passes_completed / qb.qb_stats!.passes * 100 | number:'1.0-1' }}
+          } @else {
+            0
+          }
             RUN ATT: {{ qb.qb_stats?.run_attempts }},
             RUN YDS: {{ qb.qb_stats?.run_yards }},
-            AVG RUN YDS: {{
-              qb.qb_stats?.run_attempts && qb.qb_stats?.run_yards
-                ? (qb.qb_stats!.run_yards / qb.qb_stats!.run_attempts)
-                : 0
-                  | number:'1.0-1'
-            }})
+            AVG RUN YDS:
+            @if (qb.qb_stats?.run_attempts && qb.qb_stats?.run_yards) {
+              {{ qb.qb_stats!.run_yards / qb.qb_stats!.run_attempts | number:'1.0-1' }}
+            } @else {
+              0
+            }
           </p>
         }
       }
