--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
@@ -44,7 +44,7 @@ label {
 
 .event-num-qtr-row {
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 5% 40% 40%;
   grid-template-rows: auto;
   grid-gap: 10px;
   justify-content: stretch;
