--- a/src/app/components/sport/item-sport/with-teams/with-teams.component.html
+++ b/src/app/components/sport/item-sport/with-teams/with-teams.component.html
@@ -18,6 +18,7 @@
         <app-add-edit-team
           [action]="'add'"
           [dialogId]="'addDialog'"
+          [sportId]="sport.id!"
           [allSponsors]="allSponsors$ | async"
           [allSponsorLines]="allSponsorLines$ | async"
         ></app-add-edit-team>
