--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
@@ -44,7 +44,7 @@ label {
 
 .event-num-qtr-row {
   display: grid;
-  grid-template-columns: 5% 40% 40%;
+  grid-template-columns: 50px 40% 40%;
   grid-template-rows: auto;
   grid-gap: 10px;
   justify-content: stretch;
@@ -104,4 +104,20 @@ label {
 .decrement-button {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
+}
+
+.event-short-view {
+  align-content: center;
+  justify-content: center;
+  margin: 5px;
+  padding: 5px;
+}
+
+.toggle {
+  padding: 0;
+}
+
+.toggle:hover {
+  // background-color: #e0e0e0;
+  cursor: pointer;
 }
