admin score forms increment inputs with buttons

--- a/src/app/shared/scoreboards/admin-forms/score-forms/score-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/score-forms/score-forms.component.html
@@ -17,15 +17,53 @@
         class="score-form"
         [formGroup]="scoreForm"
       >
-        <tui-input-number
-          class="score-form_team_input"
-          formControlName="scoreTeamA"
-        >Home:
-        </tui-input-number>
-        <tui-error
-          formControlName="scoreTeamA"
-          [error]="[] | tuiFieldError | async"
-        ></tui-error>
+        <div class="input-number-with-buttons">
+          <tui-input-number
+            [tuiTextfieldSize]="'l'"
+            class="input-number"
+            [formControlName]="'scoreTeamA'"
+            [tuiTextfieldCleaner]="true"
+            [min]="0"
+          >
+            {{ 'Ball On' | uppercase }}
+            <input
+              name="Score Home"
+              tuiTextfield
+            />
+          </tui-input-number>
+          @if (getFormDataByKey(scoreForm, 'scoreTeamA'); as num) {
+            <button
+              appearance="icon"
+              icon="tuiIconPlus"
+              tuiIconButton
+              class="increment-button"
+              [size]="'xs'"
+              [disabled]="scoreForm.disabled"
+              (click)="incrementNumberInFormGroup(scoreForm, num, 1, 'scoreTeamA')"
+            >
+            </button>
+            <button
+              appearance="icon"
+              icon="tuiIconMinus"
+              tuiIconButton
+              class="decrement-button"
+              [size]="'xs'"
+              [disabled]="scoreForm.disabled"
+              (click)="incrementNumberInFormGroup(scoreForm, num, 1, 'scoreTeamA')"
+            >-
+            </button>
+          }
+        </div>
+
+        <!--        <tui-input-number-->
+        <!--          class="score-form_team_input"-->
+        <!--          formControlName="scoreTeamA"-->
+        <!--        >Home:-->
+        <!--        </tui-input-number>-->
+        <!--        <tui-error-->
+        <!--          formControlName="scoreTeamA"-->
+        <!--          [error]="[] | tuiFieldError | async"-->
+        <!--        ></tui-error>-->
         <app-admin-submit-button
           [disabled]="disabled"
           (click)="updateScoreTeam('a', data.match_data!)"
