--- a/src/app/shared/scoreboards/admin-forms/score-forms/score-forms.component.less
+++ b/src/app/shared/scoreboards/admin-forms/score-forms/score-forms.component.less
@@ -24,6 +24,7 @@
   border-radius: 5px;
 
   display: grid;
+  grid-template-columns: auto;
   padding: 10px;
   grid-gap: 10px;
 
@@ -63,8 +64,30 @@
   grid-template-rows: auto auto;
   padding: 10px;
   grid-gap: 10px;
+}
 
+.input-number-with-buttons {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  grid-template-rows: auto auto;
+  grid-gap: 5px;
+  justify-content: center;
+  align-items: center;
+}
 
+.input-number {
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+}
+
+.increment-button {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+}
+
+.decrement-button {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
 }
 
 @media screen and (max-width: 720px) {
